user story 1 et 2 ok

--- a/config/config.json
+++ b/config/config.json
@@ -16,9 +16,12 @@
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "test",
+    "password": "root",
+    "database": "yasmineBd",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": "8889"
   }
 }
+
+
